--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -194,7 +194,9 @@
                 android:importantForAutofill="no"
                 android:inputType="phone"
                 android:gravity="center"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:digits="0123456789"
+                android:maxLength="10"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
